Bug 2006977 - Add a gap between the Update button and What's New in aboutDialog. r=aleca
Differential Revision: https://phabricator.services.mozilla.com/D277276

--- a/mail/base/content/aboutDialog.css
+++ b/mail/base/content/aboutDialog.css
@@ -77,7 +77,8 @@ body {
   cursor: text;
 }
 
-#releasenotes {
+#releasenotes,
+#updateNotes {
   margin-inline-start: 0.5em;
 }
 
